<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="buttonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="passwd">password</string>
    <string name="switch_text">What does this do?</string>
    <string name="rb">Radio Button</string>
    <string name="cb">Check box</string>
    <string name="nextScreen">Next Screen</string>
    <string name="prevScreen">Previous Screen</string>
    <string name="Login">Login</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Alert message</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="startChat">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="weatherButton">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbar">Toolbar</string>
    <string name="title_activity_test_toolbar2">TestToolbar2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dialog_lab8">Do you want to go back?</string>
</resources>
