<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.delle6330.androidlabs.ListItemsActivity">

    <RadioButton
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/rb" />

    <CheckBox
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/cb" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="1"

        android:text="@string/switch_text" />

    <ImageButton
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_gravity="fill"/>

</GridLayout>
